--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,7 +4,8 @@ h1 a {
 }
 
 body {
-    padding-left: 15px;
+    /*padding-left: 15px;*/
+    padding-left: 0px;
 }
 
 .page-header {
@@ -54,4 +55,8 @@ h1, h2, h3, h4 {
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
+}
+
+.errorlist {
+    color: #ff0000;
 }
